--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         }
         
         .corner-hit.show {
-        }
-        
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1);
+        }        
         .nope-overlay {
             display: none;
             position: fixed;
