--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
                 if (data.success) {
                     prizes = newPrizes;
                     drawWheel();
-                    alert('Prizes saved! 🎉');
+                    alert('✅ Prizes saved successfully! 🎉');
                 }
             } catch (error) {
                 console.error('Error saving prizes:', error);
@@ -1414,7 +1414,7 @@
                 const data = await response.json();
                 if (data.success) {
                     players = newPlayers;
-                    alert('Players saved! 💾');
+                    alert('✅ Players saved successfully! 💾');
                 }
             } catch (error) {
                 console.error('Error saving players:', error);
