--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         <p class="subtitle">Spin to win absolutely useless prizes!</p>
         
         <div class="total-spins-counter">
-            <h3>🎡 TOTAL SPINS 🎡</h3>
+            <h3>✨ DREAMS MADE REALITY ✨</h3>
             <div class="count" id="totalSpinCount">0</div>
         </div>
         
