--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         h1 {
             text-align: center;
             color: #667eea;
-            font-family: 'Fredoka', sans-serif; font-weight: 300; letter-spacing: 2px;
+            font-family: 'Bangers', cursive;
             font-size: 2.8em;
             margin-bottom: 5px;
             text-shadow: 3px 3px 0px rgba(0,0,0,0.1);
@@ -556,7 +556,7 @@
         <p class="subtitle">Spin to win absolutely useless prizes!</p>
         
         <div class="total-spins-counter">
-            <h3>🎡 TOTAL SPINS 🎡</h3>
+            <h3>✨ DREAMS MADE REALITY ✨</h3>
             <div class="count" id="totalSpinCount">0</div>
         </div>
         
