--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             min-height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             padding: 20px;
-            overflow: hidden;
+            overflow-y: auto;
             position: relative;
             transition: filter 0.08s;
         }
